<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Monittox</string>
    <string name="AUTHENTIFICATION">S\'AUTHENTIFIER</string>
    <string name="bienvenue">BIENVENUE A Monittox</string>

    <!-- sign up form labels-->
    <string name="inscription_form_title">INSCRIPTION</string>

    <string name="nom_label">Nom</string>
    <string name="prenom_label">Prenom</string>
    <string name="lieu_naissance_label">Lieu de naissance</string>
    <string name="date_naissance_label">Date de naissance</string>
    <string name="inpe_label">Code INPE</string>
    <string name="hopital_label">Hôpital</string>
    <string name="telephone_label">Téléphone</string>
    <string name="email_label">Adresse mail </string>
    <string name="adresse_label">Adresse </string>
    <string name="mdp_label">Mot de passe</string>
    <string name="mdp_confirmation_label">Confirmer votre mot de passe</string>
    <string name="mdp_oublie_label">Mot de passe oublié ?</string>


    <string name="alertes" tools:ignore="ExtraTranslation">Alertes</string>
    <string name="rapports">Rapports</string>
    <string name="patients">Patients</string>
    <string name="deconnexion">SE DECONNECTER</string>

    <string name="datee">date &amp; heure</string>


    <string name="title_activity_inscription">Inscription</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_patient">Ajouter un nouveau patient</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_ajouter_patient">Ajouter un nouveau patient</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_single_profile">Profil</string>
    <string name="appbar_scrolling_view_behavior">none</string>
    <string name="title_activity_test">test</string>
</resources>
