<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="286dp"
        android:layout_height="94dp"
        android:src="@drawable/monitox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/alertes"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="3dp"
        android:background="@drawable/shapeemail"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:text="@string/alertes"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/rapports"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/shapeemail"
        android:layout_margin="3dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:text="@string/rapports"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/patients"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="3dp"
        android:background="@drawable/shapeemail"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:text="@string/patients"
        android:textColor="#000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <ImageView
        android:id="@+id/alep"
        android:layout_width="58dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/alarm"
        app:layout_constraintBottom_toBottomOf="@+id/alertes"
        app:layout_constraintEnd_toEndOf="@+id/alertes"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/alertes"
        app:layout_constraintTop_toTopOf="@+id/alertes"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/rapp"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/medical_history2"
        app:layout_constraintBottom_toBottomOf="@+id/rapports"
        app:layout_constraintEnd_toEndOf="@+id/rapports"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="@+id/rapports"
        app:layout_constraintTop_toTopOf="@+id/rapports"
        app:layout_constraintVertical_bias="0.181" />

    <ImageView
        android:id="@+id/patp"
        android:layout_width="53dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/patient"
        app:layout_constraintBottom_toBottomOf="@+id/patients"
        app:layout_constraintEnd_toEndOf="@+id/patients"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/patients"
        app:layout_constraintTop_toTopOf="@+id/patients"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/disconnect"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/dis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patients"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/login" />

    <TextView
        android:id="@+id/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="504dp"
        android:text="Déconnexion"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

    <TextView
        android:id="@+id/alerts_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/alertes"
        app:layout_constraintEnd_toEndOf="@+id/alertes"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="@+id/alertes"
        app:layout_constraintTop_toTopOf="@+id/alertes"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/reports_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rapports"
        app:layout_constraintEnd_toEndOf="@+id/rapports"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="@+id/rapports"
        app:layout_constraintTop_toTopOf="@+id/rapports"
        app:layout_constraintVertical_bias="0.657" />

    <TextView
        android:id="@+id/Info_Dr"
        android:layout_width="319dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="Dr."
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />
</android.support.constraint.ConstraintLayout>